# ratio

./: .env.example  .gitignore  Cargo.toml  README.md  forum_posts.py  outlook_ticker_search.py  requirements.txt
apps/ratio-backend/: Cargo.toml
apps/ratio-backend/src/: main.rs
crates/ratio-config/: Cargo.toml
crates/ratio-config/src/: lib.rs  logging.rs  settings.rs
crates/ratio-domain/: Cargo.toml
crates/ratio-domain/src/: assessment.rs  company.rs  document.rs  lib.rs
crates/ratio-storage/: Cargo.toml
crates/ratio-storage/migrations/: 0001_initial.sql
crates/ratio-storage/src/: bootstrap.rs  lib.rs  repositories.rs  sqlite.rs
docs/: backend_architecture.md  logging_contract.md  sizing_logic.md  spec.md
ratio_backend/: __init__.py  bootstrap.py
ratio_backend/core/: __init__.py  config.py  logging.py
ratio_backend/db/: __init__.py  base.py  models.py  repositories.py  session.py
ratio_backend/domain/: __init__.py  assessment.py  audit.py  company.py  evidence.py  user.py
ratio_backend/ingestion/: __init__.py  forum_posts.py  outlook_ticker_search.py
ratio_backend/integrations/: __init__.py
ratio_backend/integrations/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
ratio_backend/services/: __init__.py  assessment_service.py  drafting.py  pipeline.py  sizing.py
summarization/: __init__.py  core.py
summarization/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
