[workspace]
members = [
  "crates/ratio-config",
  "crates/ratio-domain",
  "crates/ratio-storage",
  "apps/ratio-backend",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "=1.0.95"
async-trait = "=0.1.83"
axum = "=0.7.5"
chrono = { version = "=0.4.38", features = ["serde"] }
dotenvy = "=0.15.7"
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "=1.0.133"
rusqlite = { version = "=0.32.1", features = ["bundled", "chrono"] }
thiserror = "=1.0.69"
tokio = { version = "=1.41.1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "fmt", "json"] }
