[package]
name = "ratio-storage"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tracing.workspace = true
ratio-config = { path = "../ratio-config" }
ratio-domain = { path = "../ratio-domain" }
